--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
         <button onClick="reloadPage()">Play Again</button>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
